--- a/main.css
+++ b/main.css
@@ -126,20 +126,23 @@ ul#nav li{
   background-size: cover;
   filter: opacity(0.8);
   -webkit-filter: opacity(0.8);
+  transition: 0.5s;
 }
 
 .panel_1:HOVER{
-  animation: focus 1s forwards;
-  -webkit-animation: focus 0.5s forwards;
+  filter: opacity(1);
 }
 
+/*
 @keyframes focus{
   100%{filter: opacity(1)};
 }
 
+
 @-webkit-keyframes focus{
   100%{filter: opacity(1)};
 }
+*/
 
 .panel_2{
   background-image:url(https://bhhscaliber.com/wp-content/uploads/2015/04/commercial-building.jpg);
@@ -147,11 +150,11 @@ ul#nav li{
   background-size: cover;
   filter: opacity(0.8);
   -webkit-filter: opacity(0.8);
+  transition: 0.5s;
 }
 
 .panel_2:HOVER{
-  animation: focus 1s infinite;
-  -webkit-animation: focus 0.5s forwards;
+  filter: opacity(1);
 }
 
 /*#########################################################
@@ -295,6 +298,7 @@ h2.big-text{
   border-bottom: 20px solid #fff;
   box-shadow: 2px 2px 10px 1px #ccc;
   width: 300px;
+  transition: 0.5s;
 }
 
 .polaroid:HOVER{
