--- a/main.css
+++ b/main.css
@@ -46,13 +46,24 @@ ul#nav li{
 #################### SPOTLIGHT ###########################
 ########################################################*/
 
-#spotlight_bg{
+#spotlight_bg_container{
   width: 100%;
   height: calc(100vh - 85px);
+  overflow: hidden;
+}
+
+#spotlight_bg{
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  position: absolute;
   background-image:url(https://images.estately.net/42_5899358_0_1553196132.jpg);
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  transform: scale(1);
+  transition: all 30s;
+  z-index: -5;
 }
 
 #spotlight_container{
@@ -308,6 +319,7 @@ h2.big-text{
 
       .margin-list li:HOVER{
         padding-left: 32px;
+        cursor: default;
       }
 
 .col50{
