Add copyright disclaimer.

--- a/main.css
+++ b/main.css
@@ -186,6 +186,15 @@ ul#nav li{
   border-top: 5px dashed #999;
 }
 
+.copyright{
+  width: 100%;
+  padding: 10px 0;
+}
+
+.copyright a{
+  color: #fff;
+}
+
 /*#########################################################
 ################## FONTS ##################################
 #########################################################*/
