--- a/main.css
+++ b/main.css
@@ -446,6 +446,7 @@ h2.big-text{
   flex-direction: column;
   justify-content: center;
   width: 50%;
+  padding: 0 20px;
   text-align: center;
 }
 
