--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ nav a:HOVER{
 }
 
 
-/* SPOTLIGHT */
+/* SPOTLIGHT - home page */
 #spotlight_bg_container{
   width: 100%;
   height: calc(100vh - 95px);
@@ -139,10 +139,66 @@ nav a:HOVER{
   font-size: 14pt;
 }
 
+/* SMALL SPOTLIGHT - for use on pages other than HOME */
+#small_spotlight_bg_container{
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
+#small_spotlight_bg_container .container{
+  display: flex;
+  height: 90%;
+  justify-content: center;
+  align-items: center;
+}
+
+#small_spotlight_bg_container .container h1{
+  color: white;
+  font-size: 60pt;
+  text-shadow: 0px 0px 5px black;
+}
+
+#small_spotlight_bg{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-image:url(http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/kitchen-painting-paris-painting-slide-3_orig.png);
+  background-position: center center;
+  background-size: cover;
+  filter: grayscale(.5);
+/*  -webkit-transition: all 5s ease;
+  z-index: -5;
+  */
+}
+
+#small_spotlight_container{
+  width: 600px;
+  height: 300px;
+  padding: 20px 10px;
+  background-color:rgba(50, 50, 50, 0.6);
+  border-width: 5px;
+  border-style: dashed;
+  transform: scale(.8);
+  border-color:rgba(155, 155, 155, 0.2);
+}
+
+#small_spotlight_container h1{
+  font-family: 'Merriweather Sans', sans-serif;
+  color: #efefef;
+}
+
+#small_spotlight_container p1{
+  font-family: 'Cabin', serif;
+  color: #efefef;
+  font-size: 14pt;
+}
+
 /* CALL PANEL */
 #callPanel{
   width: 100%;
-  position: absolute;
+  position: relative;
   padding: 10px 0;
   margin-top: -10px;
   bottom: 0;
@@ -252,6 +308,10 @@ nav a:HOVER{
 
 #first{
   width: 100%;
+}
+
+#first h4{
+  color: #4b4b4b;
 }
 
 /*#########################################################
@@ -394,6 +454,10 @@ h2.big-text{
 .neutral-bg{
   background-color: var(--neutral);
   color: #efefef;
+}
+
+.med-bg{
+  background-color: lightblue;
 }
 
 .testimonial-bg{
@@ -551,6 +615,7 @@ h2.big-text{
 
 .floating_box_60{
   width: 58%;
+  float: left;
   padding: 30px 10px;
 }
 
@@ -567,7 +632,9 @@ h2.big-text{
 }
 
 .col30{
-  width: 30%;
+  width: 29%;
+  padding-right: 1%;
+  float: left;
 }
 
 /*#####################################################
