--- a/main.css
+++ b/main.css
@@ -92,8 +92,14 @@ nav a:HOVER{
 #spotlight_bg_container{
   width: 100%;
   height: calc(100vh - 95px);
-  overflow: hidden;
   padding-top: 60px;
+  background-color: gray;
+  background-image:url(https://gilberthomesales.files.wordpress.com/2012/10/houses-for-sale-at-bella-vista-in-gilbert-az.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  transition: all 10s;
+  overflow: hidden;
 }
 
 #spotlight_bg_container .container{
@@ -103,19 +109,19 @@ nav a:HOVER{
   align-items: center;
 }
 
+/*
 #spotlight_bg{
   width: 100%;
   height: 100%;
   position: relative;
-  background-image:url(https://images.estately.net/42_5899358_0_1553196132.jpg);
-  background-position: center center;
+  background-image:url(https://gilberthomesales.files.wordpress.com/2012/10/houses-for-sale-at-bella-vista-in-gilbert-az.jpg);
+  background-position: center top;
   background-size: cover;
   background-attachment: fixed;
-  transform: scale(1.1);
-/*  -webkit-transition: all 5s ease;
-  z-index: -5;
-  */
+  transform: scale(1.3);
+  transition: all 10s;
 }
+*/
 
 #spotlight_container{
   width: 600px;
@@ -178,6 +184,10 @@ nav a:HOVER{
 
 #small_spotlight_bg.about-us{
   background-image:url(https://www.clients-ib.com/wp-content/uploads/2017/10/123-4-750x400.png);
+}
+
+#small_spotlight_bg.contact-us{
+  background-image:url(https://www.quickensupporthelpnumber.com/images/cont.jpg);
 }
 
 #small_spotlight_container{
@@ -319,6 +329,15 @@ nav a:HOVER{
 
 #first h4{
   color: #4b4b4b;
+}
+
+.link-in-text a{
+  color: inherit;
+  text-decoration: none;
+}
+
+.link-in-text a:HOVER{
+  text-decoration: underline;
 }
 
 /*#########################################################
